change dropdown hover syntax to resolve overlap with close button. (#113)

--- a/scss/components/user-avatar.scss
+++ b/scss/components/user-avatar.scss
@@ -23,7 +23,7 @@ $caret-radius: 12px;
 
   // Hide the dropdown content whenever not being hovered over
   &:not(:hover) .dropdown-content {
-    opacity: 0;
+    display: none;
   }
 
   .dropdown-content {
